@@ -2,10 +2,10 @@ use strict;
 use warnings;
 
 use English;
-use Error::Pure::Utils qw(clean);
+use Error::Pure::Utils qw(clean err_msg_hr);
 use Mo::utils qw(check_array);
 use Test::MockObject;
-use Test::More 'tests' => 5;
+use Test::More 'tests' => 9;
 use Test::NoWarnings;
 
 # Test.
@@ -17,6 +17,9 @@ eval {
 };
 is($EVAL_ERROR, "Parameter 'key' must be a array.\n",
 	"Parameter 'key' must be a array.");
+my $err_msg_hr = err_msg_hr();
+is($err_msg_hr->{'Reference'}, '', 'Test error parameter (Reference: ).');
+is($err_msg_hr->{'Value'}, 'foo', 'Test error parameter (Value: foo).');
 clean();
 
 # Test.
@@ -40,4 +43,7 @@ eval {
 };
 is($EVAL_ERROR, "Parameter 'key' must be a array.\n",
 	"Parameter 'key' must be a array.");
+$err_msg_hr = err_msg_hr();
+is($err_msg_hr->{'Reference'}, '', 'Test error parameter (Reference: ).');
+is($err_msg_hr->{'Value'}, 'undef', 'Test error parameter (Value: undef).');
 clean();
