@@ -1,5 +1,6 @@
 0.21
  - Add Mo::utils::CSS to SEE ALSO section in doc.
+ - Add tests for error parameters.
  - Fix test for check_array_object().
  - Improve error check for check_array_object().
  - Move code for check of objec to helper.
